<resources>
    <string name="app_name">GuessStar</string>
    <string name="celebrity_photo">Фото знавменитости</string>
    <string name="fon">Fon</string>
    <string name="guess_star">Угадай звезду!</string>
    <string name="star_game">Начать игру</string>
    <string name="guess_star_text">Guess star</string>
    <string name="restart_game">Начть заново</string>
    <string name="title">title</string>
    <string name="titleDanger">titleDanger</string>
    <string name="exit">Выйти</string>
    <string name="offline">Извените. Отсутствует соеденение с интернетом.</string>
</resources>